static/main.css
/*--------------------------------------------------------------
# General
--------------------------------------------------------------*/
:root {
    --grey-100-color: #E8E8E8;
    --grey-300-color: #D2D2D2;
    --grey-500-color: #A6A6A6;
    --grey-700-color: #636363;
    --orange-100-color: #F7C3AF;
    --orange-300-color: #F3A080;
    --orange-500-color: #EC6C3A;
}

body {
    font-family: 'Jost', sans-serif;
    padding: 0px 20px 0px 20px;
}

ol, ul, h1, h2, h3, p, button {
    margin: 0;
    padding: 0;
}

ul {
    list-style-type: none;
}

a {
    color: black;
    text-decoration: none;
}

button {
    border: none;
    outline: none;
    background-color: transparent;
    display: flex;
    flex-direction: row;
    align-items: center;
}

header {
    padding: 20px 0px 20px 0px;
}

/*  Typography  */
h1 {
    font-weight: 800;
}

h2 {
    font-weight: 700;
}

/*--------------------------------------------------------------
# Navbar
--------------------------------------------------------------*/
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo {
    color: var(--orange-500-color)
}

.search-container {
    display: flex;
}

#search {
    margin-top: 40px;
    display: flex;
    align-items: center;
    background-color: var(--grey-100-color);
    border-radius: 8px;
    padding: 8px 5px 8px 5px;
    flex: 1;
}

#search-entry {
    background-color: var(--grey-100-color);
    border: none;
    outline: none;
    flex: 1;
    padding-left: 10px;
}

#search-submit {
    border: none;
    background-color: transparent;
}

.search-icon {
    width: 30px;
    height: 30px;
}

/*--------------------------------------------------------------
# Recipe Feed
--------------------------------------------------------------*/
#recipe-feed {
    display: flex;
    flex-direction: column;
    align-items: center;
}

/*--------------------------------------------------------------
# Recipe Card 
--------------------------------------------------------------*/
.recipe-card {
    display: grid; 
    grid-auto-columns: 440px; 
    grid-template-rows: 230px 30px 30px; 
    gap: 5px 0px; 
    grid-template-areas: 
    "image"
    "title"
    "subtitle"; 
}
.image-container { 
    grid-area: image;
    width: 100%;
    height: 100%; 
}

.recipe-image {
    width: inherit;
    height: inherit;
    object-fit: cover;
    border-radius: 6px;
}

.tags-container {
    display: flex;
    position: absolute;
    flex-direction: row;
    margin-top: -50px;
    justify-content: space-between;
    padding-left: 10px;
    padding-right: 10px;
    font-size: 16px;
    font-weight:400;
    width: 440px;
}

.tag {
    border-radius: 6px;
    background-color: rgba(33, 33, 33, 0.8);
    color: #FBFAF9;
    padding: 4px 10px 4px 10px;
    display: flex;
}

.title-container { grid-area: title; }

.subtitle-container { 
    grid-area: subtitle;
    display: flex;
    flex-direction: row;
    gap: 5px; 
}

#star-icon {
    width: 25px;
    height: 25px;
}
  
/*--------------------------------------------------------------
# Search Results Page
--------------------------------------------------------------*/
#results-message {
    padding: 5px 0px 15px 0px;
}

/*--------------------------------------------------------------
# Recipe Page
--------------------------------------------------------------*/
.recipe-grid {
    display: grid; 
    grid-template-columns: 1fr; 
    grid-template-rows: 0.1fr 300px 0.3fr auto auto; 
    gap: 20px 0px; 
    padding: 20px 0px 20px 0px;
    grid-template-areas: 
    "title"
    "image"
    "info"
    "ingredients"
    "instructions";
}
.title {
    grid-area: title;
}
.image {
    grid-area: image;
    width: 100%;
    height: 100%;
    
}

#recipe-image {
    width: inherit;
    height: inherit;
    object-fit: cover;
    border-radius: 8px;
}

.info {
    grid-area: info;
    display: flex;
    flex-direction: column;
    gap: 10px;
    color: var(--grey-700-color);
    font-weight: 600;
}

.recipe-time {
    display: flex;
    flex-direction: row;
    gap: 15px;
}

.ingredients {
    grid-area: ingredients;
}

.recipe-instruction {
    display: flex;
    flex-direction: row;
}
.instruction {
    flex: 1;
}
.instruction-num {
    padding-right: 8px;
    font-weight: 600;
}

/*--------------------------------------------------------------
# Add Recipe Page
--------------------------------------------------------------*/
/*    Add Grid    */
.add-grid {
    display: grid;
    grid-template-rows: 0.5fr 3fr 1fr auto auto auto auto;
    grid-template-columns: 1fr;
    gap: 10px 0px;
    grid-template-areas: 
    "intro"
    "image"
    "metrics"
    "cuisine"
    "difficulty"
    "ingredients"
    "instructions";
}

/*    General    */

.input-label {
    font-weight:500;
    padding: 5px 0px 5px 0px;
}

.input-grey {
    background-color: rgba(232, 232, 232, 0.6);
    border: none;
    border-radius: 8px;
    padding: 12px 16px 12px 16px;
}

/* Modal */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.267);
    padding: 100px 10px 0px 10px;
}

.modal-header {
    border: none;
}

.modal-content {
    padding: 20px;
    margin: 15% auto;
    width: 100%;
    background-color: white;
    border: none;
}

.modal-footer {
    border: none;
}

/* Close Button */
.close-btn {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

  .close:hover,
  .close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.save-btn {
    background-color: #ec6c3a;
    color: white;
    padding: 12px 30px 12px 30px;
    border-radius: 30px;
}
/*    Introduction    */

#add-intro {
    grid-area: intro;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#title-input,#description-input {
    border: none;
    color: var(--grey-500-color);
    color: black;
}

#title-input {
    font-size: 32px;
    font-weight: 500;
}

#description-input {
    font-size: 20px;
    font-weight: 400;
}

/*    Image   */
#add-image {
    grid-area: image;
}

label[for=image-input] {
    width: 100%;
    height: 90%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 0;
    background-color: var(--grey-100-color);
    border-radius: 8px;
}

#image-input {
    display: none;
}

#recipe-image-preview {
    object-fit: cover;
    border-radius: 8px;
}

/*    Metrics   */
#add-metrics {
    grid-area: metrics;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 30px;
}

.metric-wrapper {
    display: flex;
    flex-direction: column;
}

#rating-input {
    width: 100%;
}

/*    Cuisine   */
#add-cuisine {
    grid-area: cuisine;
}
#cuisine-input {
    width: 100%;
}

/*    Difficulty   */
#add-difficulty {
    grid-area: difficulty;
}

.buttons-container {
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.difficulty-btn {
    padding: 8px 24px 8px 24px;
    border-radius: 40px;
    border: 1px solid var(--orange-100-color);
    color: var(--orange-500-color);
    background-color: transparent;
    font-weight: 800;
}

.difficulty-btn:focus {
    background-color: var(--orange-500-color);
    color: white;
    outline: 0;
}

/*    Add Ingredients  */
#add-ingredients {
    grid-area: ingredients;
}

#ingredient-name {
    width: 100%;
}

.amount-container {
    display: flex;
    flex-direction: row;
    gap: 10px;
    width: 100%;
}

.ingredient-entry, .instruction-entry {
    padding: 10px 0px 10px 0px;
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
}

/*    Add Instructions  */
#add-instructions {
    grid-area: instructions;
}

#instruction-text {
    width: 100%;
}

/*    Add Submit   */
#add-submit {
    display: flex;
    justify-content: flex-end;
}

.save-btn:focus {
    outline: 0;
}

#success-message {
    background-color: green;
    color: white;
    padding: 10px;
    gap: 10px;
    font-weight: 400;
    text-align: center;
    display: none;
}
#view-recipe {
    color: white;
    font-weight: 700;
}

